<resources>
    <string name="app_name">HydrogenPaymentSDK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hydrogen_logo">Hydrogen Logo</string>
    <string name="payment_request">Payment Request</string>
    <string name="expires_in">Expires in: </string>
    <string name="expires_in_place_holder">Expires in: %1s</string>
    <string name="sample_time_left">15:00</string>
    <string name="customer_name_abrev">%1s</string>
    <string name="single_string_place_holder">%1s</string>
    <string name="amount_in_naira_place_holder">₦ %1s</string>
    <string name="merchant_ref_place_holder">Merchant Ref: %1s</string>
    <string name="select_payment_method">Select payment method</string>
    <string name="choose_your_convenient_mode_of_payment">Choose your convenient mode of payment</string>
    <string name="bank_transfer">Bank transfer</string>
    <string name="secure_account_to_account_payments">Secure account to account payments</string>
    <string name="select">Select</string>
    <string name="pay_by_card">Pay by card</string>
    <string name="easey_and_Secure_card_payment">Easy and secure card payments</string>
    <string name="return_to_merchant">Return back to merchant</string>
    <string name="powered_by">Powered by</string>
    <string name="change_payment_method">Change payment method</string>
    <string name="transfer_to_1s">Transfer to: %1s</string>
    <string name="copy">Copy</string>
    <string name="bank_transfer_info">Please do not leave the app as this could disrupt your transaction</string>
    <string name="i_have_made_this_payment">I HAVE MADE THIS PAYMENT</string>
    <string name="cbn">CBN</string>
    <string name="licenced_by_cbn">Licenced by CBN</string>
    <string name="payment_services_company_limited">Payment Services Company Limited</string>
    <string name="checking_your_payment">Checking your payment</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="transaction_details">Transaction details</string>
    <string name="merchant">Merchant</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="total_amount">Total Amount</string>
    <string name="description">Description</string>
    <string name="receiver_s_bank_information">Receiver\'s bank information</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="account_name">Account Name</string>
    <string name="a_copy_of_this_receipt_has_been_sent_your_email">A copy of this receipt has been sent your email</string>
    <string name="powered_by_hydrogen">Powered by Hydrogen</string>
    <string name="dismiss">Dismiss</string>
    <string name="are_you_sure_you_want_to_switch_payment_options">Are you sure you want to switch payment options?</string>
    <string name="click_yes_or_no">Clicking on “yes” would reset the transaction, If you have made this payment, please wait for a confirmation.</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="card_number">Card number*</string>
    <string name="card_expiry">Card expiry*</string>
    <string name="mm_yy">MM / YY</string>
    <string name="cvv">CVV*</string>
    <string name="asteristks">***</string>
    <string name="save_card_details_for_future_transactions">Save card details for future transactions</string>
    <string name="view_saved_cards">View saved cards</string>
    <string name="cancel">Cancel</string>
    <string name="licenced_by_mc_visa_verve_cbn">Licenced by MasterCard, Visa, Verve and CBN</string>
    <string name="contact_details">Contact details</string>
    <string name="country">Country*</string>
    <string name="phone_number">Phone number*</string>
    <string name="_01234567890">012345678910</string>
    <string name="submit">Submit</string>
    <string name="please_enter_otp_here">Please enter the OTP sent to your phone number ending with (…%1s) here</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="transaction_failed">Transaction failed!</string>
    <string name="transaction_failure_reason">Your transaction could not be completed due to OTP Verification failure</string>
    <string name="try_again">Try again</string>
    <string name="incl_service_charge_vat">Incl.Service charge + VAT</string>
    <string name="click_for_more_info">Click for more info</string>
    <string name="we_re_processing_your_purchase">We\'re processing your purchase</string>
    <string name="your_payment_is_being_processed">Your payment is being processed.</string>
    <string name="choose_a_card">Choose a card</string>
    <string name="close">Close</string>
    <string name="use_a_new_card">Use a new card</string>
    <string name="this_card_already_exists">This card already exists!</string>
    <string name="card_already_exists_response">This card has already been saved. Please verify your details or try adding a different card.</string>
    <string name="okay">Okay</string>
    <string name="do_you_really_want_to_delete_card">Are you sure you want to delete this card?</string>
    <string name="click_yes_or_no_to_confirm_card_deletion">This card has already been saved. Please verify your details or try adding a different card.</string>
    <string name="billing_information">Billing Information</string>
    <string name="first_name">First name *</string>
    <string name="last_name">Last name*</string>
    <string name="address">Address *</string>
    <string name="country_code">Country code *</string>
    <string name="locality">Locality*</string>
    <string name="postal_code">Postal code*</string>
    <string name="email">Email*</string>
    <string name="administrative_area_state_province">Administrative Area (State/Province)*</string>
    <string name="place_holder_str">Place holder string</string>
    <string name="transaction_in_progress">Disabled! Transaction in progress!</string>
    <string name="loader_image">Processing</string>
    <string name="account_number_copied">Account number copied</string>
    <string name="time_out">Time out</string>
    <string name="you_will_be_redirected">You will be redirected to Merchant\'s app in %1s seconds.</string>
    <string name="balloon_text_place_holder">Purchase amount:&#160;₦ %1s\nService charge: &#160; ₦ %2s &#160; &#160; &#160; &#160; &#160; &#160; \nVAT &#160; %3s%% : ₦ %4s &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160;&#160; \nDiscount: &#160; ₦ %5s &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; </string>
    <string name="balloon_place_holder_text">Purchase amount:&#160;₦ %1s\nService charge: &#160; ₦ %2s \nVAT &#160; %3s%% : ₦ %4s &#160; \nDiscount: &#160; ₦ %5s </string>
    <string name="balloon_sample_text">Purchase amount:&#160;₦ 35, 000.69 \nService charge: &#160; ₦ 305 \nVAT &#160; 7.5%% : ₦ 287 &#160; \nDiscount: &#160; ₦ 200 </string>
    <string name="payment_is_still_pending">Payment is still pending</string>
    <string name="setting_up">Setting Up...</string>
    <string name="sandbox_transaction">SANDBOX TRANSACTION</string>
    <string name="enter_pin">Enter PIN *</string>
    <string name="card_pin_footer_message">Hydrogen uses industry-standard encryption to protect your information.</string>
    <string name="pay_amount_place_holder">PAY %1s %2s</string>
    <string name="invalid_card_number">Invalid Card Number</string>
    <string name="invalid_card_expiry_date">Invalid date</string>
    <string name="pay">PAY</string>
    <string name="_03attemps">%1s/3 attempts</string>
    <string name="total_amount_paid">Total Amount paid</string>
    <string name="puchase_amount">Purchase amount</string>
    <string name="service_charge">Service charge</string>
    <string name="vat_place_holder">VAT(%1s%%)</string>
    <string name="otp_successful_getting_trans_status">OTP Successful, getting Transaction Status…</string>
    <string name="transaction_status_failed">Getting transaction status failed</string>
    <string name="transaction_successful">Transaction Successful</string>
    <string name="card_number_without_asterisks">Card number</string>
    <string name="transaction_cancelled">Transaction Cancelled</string>
    <string name="your_card_information">Your card information</string>
    <string name="delete">Delete</string>
    <string name="last_used">(Last used)</string>
    <string name="card_icon">Card Icon</string>
    <string name="choose_and_proceed">Choose And Proceed</string>
</resources>