<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.TransactionProcessingFragment">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/dimen_15dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hydrogen_logo"
            android:src="@drawable/hydrogen_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_2dp"
            android:contentDescription="@null"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:paddingHorizontal="0dp"
            android:scaleType="fitStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/powered_by_hydrogen" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/heading_exo"
            android:textSize="@dimen/dimen_18sp"
            android:text="@string/we_re_processing_your_purchase"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/your_payment_is_being_processed"
            style="@style/sub_heading_poppins"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView47" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginHorizontal="@dimen/dimen_25dp"
            android:progress="30"
            android:progressBackgroundTint="@color/lighter_dark"
            android:progressTint="@color/light_blue"
            app:layout_constraintEnd_toEndOf="@+id/textView48"
            app:layout_constraintStart_toStartOf="@+id/textView48"
            app:layout_constraintTop_toBottomOf="@+id/textView48" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:src="@drawable/info"
            app:layout_constraintEnd_toStartOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:drawablePadding="@dimen/dimen_5dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/bank_transfer_info"
            android:textAlignment="center"
            android:textSize="@dimen/dimen_10sp"
            app:layout_constraintEnd_toEndOf="@+id/textView47"
            app:layout_constraintStart_toStartOf="@+id/textView47"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>