<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="paymentMethod"
            type="com.hydrogen.hydrogenpaymentsdk.domain.models.PaymentMethod" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bank_transfer_content_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/image_bg"
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:background="@drawable/payment_method_icon_bg"
            android:layout_marginBottom="@dimen/dimen_3dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/dimen_25dp"
            android:layout_height="@dimen/dimen_25dp"
            android:background="@drawable/payment_method_icon_bg"
            android:contentDescription="@string/bank_transfer"
            android:loadImageFromPaymentMethodsImageUrl="@{paymentMethod.image}"
            app:layout_constraintBottom_toBottomOf="@+id/image_bg"
            app:layout_constraintStart_toStartOf="@+id/image_bg"
            app:layout_constraintTop_toTopOf="@+id/image_bg"
            app:layout_constraintEnd_toEndOf="@+id/image_bg"
            tools:srcCompat="@drawable/bank_ic" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:fontFamily="@font/exo_bold"
            android:text="@{paymentMethod.name}"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/bank_transfer" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginEnd="@dimen/dimen_15dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins"
            android:maxLines="1"
            android:text="@{paymentMethod.description}"
            android:textSize="@dimen/dimen_11sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:text="@string/secure_account_to_account_payments" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:contentDescription="@string/select"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_right_icon" />

        <View
            android:id="@+id/horizontal_line_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_2dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginBottom="@dimen/dimen_3dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>